tests/nonsmoke/functional/CompileTests/Cxx20_tests/test2020_100.C
new int + 1; // okay: parsed as (new int) + 1, increments a pointer returned by new int
new int * 1; // error: parsed as (new int*) (1)

